+hot refresh html

--- a/entry/index.html
+++ b/entry/index.html
@@ -10,7 +10,7 @@
 <div id="container"></div>
 <div>
     <p><i class="glyphicon glyphicon-arrow-left"></i></p>
-    <p class="css">222</p>
+    <p class="css">6666</p>
 </div>
 <div class="dropdown">
     <button id="dLabel" class="btn btn-primary" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -21,10 +21,10 @@
         <li>132</li>
         <li>132</li>
         <li>132</li>
-        <li>132</li>
+        <li>9999</li>
     </ul>
 </div>
 </div>
-<script src="index.bundle.js"></script>
+<script src="../output/index.bundle.js"></script>
 </body>
 </html>
